[metadata]
name = networkcalculator
version = 1.0.5
author = Ray Bernard
author_email = ray.bernard@outlook.com
description = Tool to generate network based on CIDR and speeds and feeds calculations
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/raymodbernard/networkcalculator
project_urls =
    Bug Tracker = https://gitlab.com/raymodbernard/networkcalculator/issues
    repository = https://gitlab.com/raymodbernard/networkcalculator
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src